--- a/Magento_Email/email/header.html
+++ b/Magento_Email/email/header.html
@@ -16,10 +16,9 @@
 <!DOCTYPE html>
 <html lang="sv">
 <head>
-    <meta charset-"utf-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="x-apple-disable-message-reformatting">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Quattrocento%3Awght%40400%3B700&amp;display=swap">
 
     <style type="text/css">
         {{var template_styles|raw}}
